--- a/tugaskelompok/pubspec.yaml
+++ b/tugaskelompok/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   geolocator: ^13.0.4
   url_launcher: ^6.3.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
