--- a/tugaskelompok/pubspec.yaml
+++ b/tugaskelompok/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   geolocator: ^13.0.4
   url_launcher: ^6.3.1
+  flutter_map: ^6.0.0
+  latlong2: ^0.9.0
+  http: ^1.3.0
   shared_preferences: ^2.2.2
 
 dev_dependencies:
